service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pruebax2-service
spec:
  selector:
    app: pruebax2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
