ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pruebax2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.cislas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pruebax2-service
            port:
              number: 80
